[package]
name = "dropbox-toolbox"
version = "0.1.0"
edition = "2021"
authors = ["Bill Fraser <bill@wfraser.dev>"]

[dependencies.dropbox-sdk]
version = "0.17.0"
default-features = false
features = ["dbx_files", "default_client"]


[dependencies]
log = "0.4, <0.4.19"
parallel_reader = "0.1.2"
ring = "0.17.5"
